--- a/style.css
+++ b/style.css
@@ -1,3 +1,13 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Passion+One:wght@400;700;900&family=Sriracha&display=swap');
+
+:root{
+
+  /*padrao*/--fonte1: Verdana, Geneva, Tahoma, sans-serif;     
+  /*titulos*/--fonte2: "Passion One", system-ui;
+  /*conteudos*/--fonte3: "Sriracha", system-ui;
+}
+
 *{
   margin: 0px;
   padding: 0px;
@@ -7,6 +17,7 @@
 html,body{
   min-height: 100vh;
   background-color:white ;
+  font-family: var(--fonte1);
 }
 
 header{
@@ -18,6 +29,8 @@ header{
 header> h1{
   padding-top: 50px;
   font-variant: small-caps;
+  font-family: var(--fonte2);
+  font-size: 10vw;
 }
 
 header> p{
@@ -39,6 +52,8 @@ section{
   padding-bottom: 10vh;
   line-height: 2em;
   padding-left: 30px;
+  font-family: var(--fonte3);
+  font-size: 3.5vw;
 }
 
 section.normal{
@@ -52,7 +67,7 @@ section.image{
 }
 
 section.image> p{
-  width: 400px;
+  display: inline-block;
   background-color: lightgray;
 }
 
